<resources>
    <string name="app_name">Capstone Reality</string>
    <string name="slogan">We give the best deals </string>
    <string name="agri">Agricultural</string>
    <string name="comm">Commercial</string>
    <string name="resi">Residential</string>
    <string name="indu">industrial</string>
    <string name="kandi">IIT Kandi</string>
    <string name="chevella">Mohinabad</string>
    <string name="shadnagar">Shad Nagar</string>
    <string name="aaraku">AAraku</string>
    <string name="farms">SS Farms</string>
    <string name="title_activity_kandi">kandi</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_mohinabad">mohinabad</string>

    <string name="contact">F.no.308,Sai Ranga Bhasker Residency,\n Beside K.S.Bakery,Miyapur,\nHyderabad\n500049</string>
    <string name="number">7661903609</string>
    <string name="contbtn">Contact Us</string>
</resources>
