<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/big"
    android:gravity="center"
    android:fitsSystemWindows="true"
    tools:context=".contact">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@drawable/selector"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation" />

    <ImageView
        android:layout_width="236dp"
        android:layout_height="208dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:contentDescription="@string/contact"
        android:src="@drawable/clp" />

    <TextView
        android:layout_width="272dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="329dp"
        android:background="@color/bgc"
        android:text="@string/contact"
        android:textColor="#000"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="236dp"
        android:text="@string/number"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/call"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="596dp"
        android:background="@drawable/shape"
        android:text="@string/contbtn"
        android:textColor="#fff"/>



</RelativeLayout>